# serai

./: .gitignore  .pii-allowlist  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  get.sh  install.sh  pyproject.toml  release.sh  run.sh  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
serai/: __init__.py  auth.py  config.py  files.py  main.py  netcfg.py  sessions.py  settings.py  store.py  tls.py  updates.py
tests/: test_serai.py
web/: app.js  index.html  style.css  themes.js
